--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "openai": "^4.15.3"
+  },
+  "engines" : {
+    "node": ">=18.0"
   }
 }
